--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       button {
          background-color: #5e4caf;
-         color: yellow;
+         color: black;
          padding: 14px 20px;
          margin: 8px 0;
          border: none;
